--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>One - Flat Theme</title>
+        <title>Привет</title>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"/>
         <link rel="shortcut icon" href="favicon.png"/>
         <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
         <link href="style/all.min.css" rel="stylesheet" type="text/css"/>
-        <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script><script src="js/modernizr-2.6.2.min.js" type="text/javascript"></script><!--[if lt IE 9]><script src="js/html5.js"></script><![endif]--><!--[if IE]>
-        <style>.timeline li{display:block;-ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";filter: alpha(opacity=100);opacity: 1;}</style>
+        <script src="js/jquery-1.9.1.min.js"></script>
+        <script src="js/modernizr-2.6.2.min.js"></script>
+        <!--[if lt IE 9]>
+        <script src="js/html5.js"></script>
+        <![endif]-->
+        <!--[if IE]>
+        <style>
+            .timeline li {
+                display:block;
+                -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
+                filter: alpha(opacity=100);
+                opacity: 1;
+            }
+        </style>
         <![endif]-->
     </head>
     <body data-spy="scroll" data-target=".navbar-flat" data-offset="55">
@@ -18,12 +30,16 @@
         <section id="welcome">
             <div id="slides">
                 <div class="overlay"></div>
-                <div class="slides-container"><img src="images/slides/1.jpg" alt="1"><img src="images/slides/2.jpg" alt="2"><img src="images/slides/3.jpg" alt="3"></div>
+                <div class="slides-container">
+                    <img src="images/slides/1.jpg" alt="1">
+                    <img src="images/slides/2.jpg" alt="2">
+                    <img src="images/slides/3.jpg" alt="3">
+                </div>
                 <nav class="slides-navigation"><a href="#" class="next"></a><a href="#" class="prev"></a></nav>
                 <div class="welcome-message">
                     <div class="heading">
-                        <p>HI, I'M JOHN DOE</p>
-                        <p class="small">Art Director from Istanbul</p>
+                        <p>Hi, I'm Rahul De</p>
+                        <p class="small">The Aim is to merge Linus Torvlads and Heston Blumenthal into one</p>
                     </div>
                     <a href="#home" class="borderBtn scrollto">MORE ABOUT ME</a>
                 </div>
@@ -31,7 +47,14 @@
         </section>
         <div class="navbar navbar-flat">
             <div class="container">
-                <div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand">MENU</a></div>
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a href="#" class="navbar-brand">MENU</a>
+                </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#welcome" class="scrollto">HOME</a></li>
@@ -48,9 +71,9 @@
             <div class="container">
                 <div class="col-xs-6 col-md-4 profilePic"><img src="images/me.jpg" alt="" class="img-circle"></div>
                 <div class="heading">
-                    <h1>JOHN DOE</h1>
-                    <h3>Sr. Art Director - Photographer - Jr. Developer</h3>
-                    <a href="#" class="borderBtn">DOWNLOAD RESUME</a>
+                    <h1>RAHUL DE</h1>
+                    <h3>Foodie <br> Compilers, Virtual Machines, Scalable Server Side Dev</h3>
+                    <a href="res/Rahul-Resume.pdf" class="borderBtn">DOWNLOAD RESUME</a>
                 </div>
             </div>
         </section>
@@ -59,23 +82,23 @@
                 <div class="divider"></div>
                 <div class="heading">
                     <h2>HERE'S WHAT I'M DOING</h2>
-                    <p>I introduce the most creative and original ideas for my customers </p>
+                    <p>People say not to mico-optimize but if that's what you love doing, Go ahead! - Linus Torvalds</p>
                 </div>
                 <div class="row">
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi</p>
+                    <p>Programming for me is na Art rather than Science. I love anything and everything related to computers, especially programming and development. I don’t mind getting my hands dirty with back-ends and game engines and I am a very versatile developer. I love working with programming language implementations and server side dev. For me nothing beats getting the maximum performance out of any particular technology. I love experimenting with new upcoming tech and be as dynamic as possible. I love cooking as I belive cooking and programming aren't much different - Works of Art.</p>
                 </div>
                 <div class="row hidethis">
                     <div class="service col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                        <p class="icon"><i class="heart"></i></p>
-                        <h3>UI/UX DESIGN</h3>
-                    </div>
-                    <div class="service col-xs-12 col-sm-6 col-md-3 col-lg-3">
                         <p class="icon"><i class="coding"></i></p>
-                        <h3>DEVELOPMENT</h3>
+                        <h3>PERFORMANCE</h3>
                     </div>
                     <div class="service col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                        <p class="icon"><i class="camera"></i></p>
-                        <h3>PHOTOGRAPH</h3>
+                        <p class="icon"><i class="cloud"></i></p>
+                        <h3>VMs and SERVERs</h3>
+                    </div>
+                    <div class="service col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                        <p class="icon"><i class="heart"></i></p>
+                        <h3>COOKING</h3>
                     </div>
                     <div class="service col-xs-12 col-sm-6 col-md-3 col-lg-3">
                         <p class="icon"><i class="music"></i></p>
@@ -92,34 +115,69 @@
                 </div>
                 <div id="skills-slide">
                     <div class="skill">
-                        <span class="chart" data-percent="50"><span class="percent"></span></span>
-                        <h4>PHOTOSHOP</h4>
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <span class="chart" data-percent="95"><span class="percent"></span></span>
+                        <h4>C/C++</h4>
+                        <p>The place where all the magic happens.</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="90"><span class="percent"></span></span>
+                        <h4>PYTHON</h4>
+                        <p>Slimy, Slithery &amp; Powerful: Gets me out of sticky spots.</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="85"><span class="percent"></span></span>
+                        <h4>JAVA</h4>
+                        <p>Like they say, Coffee is a Programmer's best friend!</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="85"><span class="percent"></span></span>
+                        <h4>JAVASCRIPT</h4>
+                        <p>Weird, quirky little guy with big Cojones.</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="80"><span class="percent"></span></span>
+                        <h4>DART</h4>
+                        <p>New kid on the block with big dreams of growing Cojones as big.</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="70"><span class="percent"></span></span>
+                        <h4>SWIFT</h4>
+                        <p>Shiny new stuff! Ooh what does this button do??</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="80"><span class="percent"></span></span>
+                        <h4>PHP</h4>
+                        <p>Old Warhorse recently running on steroids.</p>
                     </div>
                     <div class="skill">
                         <span class="chart" data-percent="95"><span class="percent"></span></span>
-                        <h4>HTML5</h4>
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <h4>Qt SDK</h4>
+                        <p>My Secret Cross-Platform Sauce.</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="85"><span class="percent"></span></span>
+                        <h4>THE LINUX KERNEL</h4>
+                        <p>The Heavenly Playground.</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="80"><span class="percent"></span></span>
+                        <h4>V8/DART VM</h4>
+                        <p>Pure CPU Burning/Gut Wrenching/Heart Warming Performance.</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="80"><span class="percent"></span></span>
+                        <h4>FACEBOOK's HHVM</h4>
+                        <p>The Ressurection.</p>
+                    </div>
+                    <div class="skill">
+                        <span class="chart" data-percent="80"><span class="percent"></span></span>
+                        <h4>NODE.JS</h4>
+                        <p>Do Servers GET any better than this??</p>
                     </div>
                     <div class="skill">
                         <span class="chart" data-percent="75"><span class="percent"></span></span>
-                        <h4>CSS</h4>
-                        <p>Lorem ipsum dolor sit amet</p>
-                    </div>
-                    <div class="skill">
-                        <span class="chart" data-percent="60"><span class="percent"></span></span>
-                        <h4>JAVASCRIPT</h4>
-                        <p>Lorem ipsum dolor sit amet</p>
-                    </div>
-                    <div class="skill">
-                        <span class="chart" data-percent="10"><span class="percent"></span></span>
-                        <h4>PHP</h4>
-                        <p>Lorem ipsum dolor sit amet</p>
-                    </div>
-                    <div class="skill">
-                        <span class="chart" data-percent="35"><span class="percent"></span></span>
-                        <h4>MYSQL</h4>
-                        <p>Lorem ipsum dolor sit amet</p>
+                        <h4>UNREAL ENGINE</h4>
+                        <p>My Alter Ego Loves Gaming and Game Dev.</p>
                     </div>
                 </div>
             </div>
@@ -137,36 +195,18 @@
                                 <div class="point"></div>
                                 <div class="bubble">
                                     <div class="bubble-arrow"></div>
-                                    <p class="date">July 2012 - Present</p>
-                                    <p class="name">Company A</p>
-                                    <p class="title">Senior UX Designer</p>
+                                    <p class="date">June 2013 - July 2013</p>
+                                    <p class="name">Alcatel - Lucent, Telesonic Networks Ltd.</p>
+                                    <p class="title">Summer Intern</p>
                                 </div>
                             </li>
                             <li class="animated odd">
                                 <div class="point"></div>
                                 <div class="bubble">
                                     <div class="bubble-arrow"></div>
-                                    <p class="date">Mar. 2010 - July 2012</p>
-                                    <p class="name">Company B</p>
-                                    <p class="title">Front-end Developer</p>
-                                </div>
-                            </li>
-                            <li class="animated">
-                                <div class="point"></div>
-                                <div class="bubble">
-                                    <div class="bubble-arrow"></div>
-                                    <p class="date">Feb. 2005 - Dec. 2007</p>
-                                    <p class="name">An Agency</p>
-                                    <p class="title">Jr. Art Director</p>
-                                </div>
-                            </li>
-                            <li class="animated odd">
-                                <div class="point"></div>
-                                <div class="bubble">
-                                    <div class="bubble-arrow"></div>
-                                    <p class="date">11/04/13</p>
-                                    <p class="name">Company C</p>
-                                    <p class="title">Jr. Front-end Developer</p>
+                                    <p class="date">July 2014 - Present</p>
+                                    <p class="name">MartMobi Technologies Pvt Ltd.</p>
+                                    <p class="title">Back-end and Infrastructure Developer</p>
                                 </div>
                             </li>
                         </ul>
@@ -268,7 +308,6 @@
                 </div>
             </div>
         </section>
-        <div id="map"></div>
         <div class="clear"></div>
         <footer class="section">
             <div class="container">
@@ -284,6 +323,6 @@
                 </ul>
             </div>
         </footer>
-        <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script><script src="js/all.min.js" type="text/javascript"></script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','../../../www.google-analytics.com/analytics.js','ga');ga('create', 'UA-51103185-1', 'sftheme.com');ga('send', 'pageview');</script>
+        <script src="js/all.min.js"></script>
     </body>
 </html>
