--- a/index.html
+++ b/index.html
@@ -204,9 +204,18 @@
                                 <div class="point"></div>
                                 <div class="bubble">
                                     <div class="bubble-arrow"></div>
-                                    <p class="date">July 2014 - Present</p>
+                                    <p class="date">July 2014 - November 2014</p>
                                     <p class="name">MartMobi Technologies Pvt Ltd.</p>
                                     <p class="title">Back-end and Infrastructure Developer</p>
+                                </div>
+                            </li>
+                            <li class="animated">
+                                <div class="point"></div>
+                                <div class="bubble">
+                                    <div class="bubble-arrow"></div>
+                                    <p class="date">December 2014 - Present</p>
+                                    <p class="name">ThoughtWorks Inc.</p>
+                                    <p class="title">Dev Consultant</p>
                                 </div>
                             </li>
                         </ul>
