Fixed Mail Logic

--- a/index.html
+++ b/index.html
@@ -308,8 +308,8 @@
                 <div class="form">
                     <div class="col-xs-12 col-sm-9 col-md-9 centered">
                         <form onSubmit="return false;" id="xhr" name="contactform" class="contactform">
-                            <input type="hidden" value="contact" name="type"><input id="name" name="send[name]" type="text" class="col-xs-12 col-sm-6 col-md-6 col-lg-6" placeholder="Your name..." data-validation="required"><input id="email" name="send[email]" type="email" class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 no-margin" placeholder="Your email..." data-validation="email">
-                            <textarea id="message" name="send[message]" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Your message..." data-validation="required"></textarea>
+                            <input type="hidden" value="contact" name="type"><input id="name" name="send[name]" type="text" class="col-xs-12 col-sm-6 col-md-6 col-lg-6" placeholder="Your name..." data-validation="required" required><input id="email" name="send[email]" type="email" class=" col-xs-12 col-sm-6 col-md-6 col-lg-6 no-margin" placeholder="Your email..." data-validation="email" required>
+                            <textarea id="message" name="send[message]" class="col-xs-12 col-sm-12 col-md-12 col-lg-12" placeholder="Your message..." data-validation="required" required></textarea>
                             <p><button id="sendButton" class="submit sendcontact">SEND MESSAGE</button></p>
                         </form>
                         <p class="error"></p>
@@ -335,6 +335,13 @@
         <script src="js/all.min.js"></script>
         <script>
             $('#sendButton').click(function () {
+                if ($('#name').val() == "" ||
+                    $('#email').val() == "" ||
+                    $('#message').val() == "") {
+                    alert('Please fill all fields');
+                    return;
+                }
+
                 $('#sendButton').html('SENDING...');
                 $.ajax({
                     type: 'POST',
