--- a/index.html
+++ b/index.html
@@ -320,9 +320,9 @@
         <div class="clear"></div>
         <footer class="section">
             <div class="container">
-                <p>&copy;2014 website.com. All Rights Reserved.</p>
+                <p>&copy;2014-2015 Rahul De. All Rights Reserved.</p>
                 <ul>
-                    <li><a target="_blank" class="facebook" href="http://www.facebook.com/"></a></li>
+                    <li><a target="_blank" class="facebook" href="http://www.facebook.com/CrossPlatform"></a></li>
                     <li><a target="_blank" class="twitter" href="http://www.twitter.com/"></a></li>
                     <li><a target="_blank" class="google" href="https://plus.google.com/"></a></li>
                     <li><a target="_blank" class="youtube" href="https://www.youtube.com/"></a></li>
