--- a/index.html
+++ b/index.html
@@ -323,12 +323,12 @@
                 <p>&copy;2014-2015 Rahul De. All Rights Reserved.</p>
                 <ul>
                     <li><a target="_blank" class="facebook" href="http://www.facebook.com/CrossPlatform"></a></li>
-                    <li><a target="_blank" class="twitter" href="http://www.twitter.com/"></a></li>
-                    <li><a target="_blank" class="google" href="https://plus.google.com/"></a></li>
-                    <li><a target="_blank" class="youtube" href="https://www.youtube.com/"></a></li>
-                    <li><a target="_blank" class="dribbble" href="http://www.dribbble.com/"></a></li>
+                    <li><a target="_blank" class="twitter" href="https://www.twitter.com/rahul080327"></a></li>
+                    <li><a target="_blank" class="google" href="https://www.google.com/+RahulDe080327"></a></li>
+                    <li><a target="_blank" class="youtube" href="https://www.youtube.com/c/RahulDe080327"></a></li>
+                    <!--<li><a target="_blank" class="dribbble" href="http://www.dribbble.com/"></a></li>
                     <li><a target="_blank" class="behance" href="https://www.behance.net/"></a></li>
-                    <li><a target="_blank" class="flickr" href="https://www.flickr.com/"></a></li>
+                    <li><a target="_blank" class="flickr" href="https://www.flickr.com/"></a></li>-->
                 </ul>
             </div>
         </footer>
