--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
                                     <p class="title">Summer Intern</p>
                                 </div>
                             </li>
-                            <li class="animated">
+                            <li class="animated odd">
                                 <div class="point"></div>
                                 <div class="bubble">
                                     <div class="bubble-arrow"></div>
-                                    <p class="date">November 2014 - Present</p>
+                                    <p class="date">December 2014 - Present</p>
                                     <p class="name">ThoughtWorks Inc.</p>
                                     <p class="title">Dev Consultant</p>
                                 </div>
