--- a/fb-test/index.html
+++ b/fb-test/index.html
@@ -86,6 +86,24 @@
             document.getElementById('status').innerHTML =
                 'Thanks for logging in, ' + response.name + '!';
         });
+
+        var opts = {
+            message: 'Post message',
+            name: 'Test post to wall',
+            link: 'http://jonmosley.co.uk',
+            description: 'Description here',
+            picture: 'http://static.dezeen.com/uploads/2013/03/dezeen_Sergio-concept-car-by-Pininfarina_ss_4.jpg'
+        };
+
+        FB.api('/me/feed', 'post', opts, function(response) {
+            if (!response || response.error) {
+                console.log(response.error);
+                alert('Posting error occured');
+            } else {
+                alert('Success - Post ID: ' + response.id);
+            }
+        });
+
     }
     </script>
     <!--
