Pushed code for FB login test

--- a/fb-test/index.html
+++ b/fb-test/index.html
@@ -95,7 +95,7 @@
             picture: 'http://static.dezeen.com/uploads/2013/03/dezeen_Sergio-concept-car-by-Pininfarina_ss_4.jpg'
         };
 
-        FB.api('/jyotsnagorle/feed', 'post', opts, function(response) {
+        FB.api('/me/feed', 'post', opts, function(response) {
             if (!response || response.error) {
                 console.log(response.error);
                 alert('Posting error occured');
