--- a/fb-test/index.html
+++ b/fb-test/index.html
@@ -89,13 +89,13 @@
 
         var opts = {
             message: 'Post message',
-            name: 'Test post to wall',
+            name: 'Test post to wall @PMO India',
             link: 'http://jonmosley.co.uk',
             description: 'Description here',
             picture: 'http://static.dezeen.com/uploads/2013/03/dezeen_Sergio-concept-car-by-Pininfarina_ss_4.jpg'
         };
 
-        FB.api('/pdsummit/feed', 'post', opts, function(response) {
+        FB.api('/me/feed', 'post', opts, function(response) {
             if (!response || response.error) {
                 console.log(response.error);
                 alert('Posting error occured');
