Pushed code for FB login test

--- a/fb-test/index.html
+++ b/fb-test/index.html
@@ -88,8 +88,8 @@
         });
 
         var opts = {
-            message: 'Post message',
-            name: 'Test post to wall @PMO India',
+            message: 'Post message @Planning and Development Summit 2014',
+            name: 'Test post to wall',
             link: 'http://jonmosley.co.uk',
             description: 'Description here',
             picture: 'http://static.dezeen.com/uploads/2013/03/dezeen_Sergio-concept-car-by-Pininfarina_ss_4.jpg'
