Pushed code for FB login test

--- a/fb-test/index.html
+++ b/fb-test/index.html
@@ -88,7 +88,7 @@
         });
 
         var opts = {
-            message: 'Post message @Planning and Development Summit 2014',
+            message: 'Post message #honestyrocks',
             name: 'Test post to wall',
             link: 'http://jonmosley.co.uk',
             description: 'Description here',
