--- a/fb-test/index.html
+++ b/fb-test/index.html
@@ -2,38 +2,24 @@
 <html>
 
 <head>
-    <title>Facebook Login JavaScript Example</title>
+    <title>Facebook FFF Test</title>
     <meta charset="UTF-8">
 </head>
 
 <body>
     <script>
-    // This is called with the results from from FB.getLoginStatus().
     function statusChangeCallback(response) {
-        console.log('statusChangeCallback');
-        console.log(response);
-        // The response object is returned with a status field that lets the
-        // app know the current login status of the person.
-        // Full docs on the response object can be found in the documentation
-        // for FB.getLoginStatus().
         if (response.status === 'connected') {
-            // Logged into your app and Facebook.
-            testAPI();
+            redirect();
         } else if (response.status === 'not_authorized') {
-            // The person is logged into Facebook, but not your app.
             document.getElementById('status').innerHTML = 'Please log ' +
                 'into this app.';
         } else {
-            // The person is not logged into Facebook, so we're not sure if
-            // they are logged into this app or not.
             document.getElementById('status').innerHTML = 'Please log ' +
                 'into Facebook.';
         }
     }
 
-    // This function is called when someone finishes with the Login
-    // Button.  See the onlogin handler attached to it in the sample
-    // code below.
     function checkLoginState() {
         FB.getLoginStatus(function(response) {
             statusChangeCallback(response);
@@ -43,31 +29,16 @@
     window.fbAsyncInit = function() {
         FB.init({
             appId: '569961519811444',
-            cookie: true, // enable cookies to allow the server to access
-            // the session
-            xfbml: true, // parse social plugins on this page
-            version: 'v2.2' // use version 2.2
+            cookie: true,
+            xfbml: true,
+            version: 'v2.2'
         });
-
-        // Now that we've initialized the JavaScript SDK, we call
-        // FB.getLoginStatus().  This function gets the state of the
-        // person visiting this page and can return one of three states to
-        // the callback you provide.  They can be:
-        //
-        // 1. Logged into your app ('connected')
-        // 2. Logged into Facebook, but not your app ('not_authorized')
-        // 3. Not logged into Facebook and can't tell if they are logged into
-        //    your app or not.
-        //
-        // These three cases are handled in the callback function.
 
         FB.getLoginStatus(function(response) {
             statusChangeCallback(response);
         });
-
     };
 
-    // Load the SDK asynchronously
     (function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
@@ -77,44 +48,16 @@
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
 
-    // Here we run a very simple test of the Graph API after login is
-    // successful.  See statusChangeCallback() for when this call is made.
-    function testAPI() {
-        console.log('Welcome!  Fetching your information.... ');
+    function redirect() {
         FB.api('/me', function(response) {
             console.log('Successful login for: ' + response.name);
-            document.getElementById('status').innerHTML =
-                'Thanks for logging in, ' + response.name + '!';
+
+            window.location = "https://www.facebook.com/fight4farmers";
         });
-
-        var opts = {
-            message: 'Post message #honestyrocks',
-            name: 'Test post to wall',
-            link: 'http://jonmosley.co.uk',
-            description: 'Description here',
-            picture: 'http://static.dezeen.com/uploads/2013/03/dezeen_Sergio-concept-car-by-Pininfarina_ss_4.jpg'
-        };
-
-        FB.api('/me/feed', 'post', opts, function(response) {
-            if (!response || response.error) {
-                console.log(response.error);
-                alert('Posting error occured');
-            } else {
-                alert('Success - Post ID: ' + response.id);
-            }
-        });
-
     }
     </script>
-    <!--
-    Below we include the Login Button social plugin. This button uses
-    the JavaScript SDK to present a graphical Login button that triggers
-    the FB.login() function when clicked.
-    -->
-    <fb:login-button scope="public_profile,email,publish_actions" onlogin="checkLoginState();">
-    </fb:login-button>
-    <div id="status">
-    </div>
+    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+    <div id="status"></div>
 </body>
 
 </html>
