Rahul | Fix skill crap

--- a/index.html
+++ b/index.html
@@ -140,14 +140,9 @@
                         <p>New kid on the block with big dreams of growing Cojones as big.</p>
                     </div>
                     <div class="skill">
-                        <span class="chart" data-percent="70"><span class="percent"></span></span>
-                        <h4>SWIFT</h4>
-                        <p>Shiny new stuff! Ooh what does this button do??</p>
-                    </div>
-                    <div class="skill">
                         <span class="chart" data-percent="80"><span class="percent"></span></span>
-                        <h4>PHP</h4>
-                        <p>Old Warhorse recently running on steroids.</p>
+                        <h4>GO-Lang</h4>
+                        <p>Blazing Servers? Done.</p>
                     </div>
                     <div class="skill">
                         <span class="chart" data-percent="95"><span class="percent"></span></span>
@@ -165,19 +160,14 @@
                         <p>Pure CPU Burning/Gut Wrenching/Heart Warming Performance.</p>
                     </div>
                     <div class="skill">
-                        <span class="chart" data-percent="80"><span class="percent"></span></span>
-                        <h4>FACEBOOK's HHVM</h4>
-                        <p>The Ressurection.</p>
+                        <span class="chart" data-percent="75"><span class="percent"></span></span>
+                        <h4>UNREAL ENGINE</h4>
+                        <p>My Alter Ego Loves Gaming and Game Dev.</p>
                     </div>
                     <div class="skill">
                         <span class="chart" data-percent="80"><span class="percent"></span></span>
                         <h4>NODE.JS</h4>
-                        <p>Do Servers GET any better than this??</p>
-                    </div>
-                    <div class="skill">
-                        <span class="chart" data-percent="75"><span class="percent"></span></span>
-                        <h4>UNREAL ENGINE</h4>
-                        <p>My Alter Ego Loves Gaming and Game Dev.</p>
+                        <p>Umm...</p>
                     </div>
                 </div>
             </div>
