--- a/index.html
+++ b/index.html
@@ -4,67 +4,27 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Damned Website</title>
+<style>
+    div.container {
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+    }
+
+    div.container a {
+        text-decoration: none;
+        font-size: 800%;
+        color: red;
+    }
+</style>
 </head>
 
 <body>
-    <header>
-        <h1>This is my damned website. Assholes.</h1>
-        <aside>And it's fucking perfect.</aside>
-    </header>
-
-        <h2>Seriously, what the fuck were you expecting?</h2>
-
-        <p>Fluid animations making you go all Awww..., 50 MB of ployfills, JQuery, Media Queries and what not to make it look all fucking perfect? And all the soooo great shadow effects, parallax and the 3D transforms giving you a huge fucking boner?</p>
-
-        <h3>Wrong motherfucker.</h3>
-
-        <h3>Just look at this site.</h3>
-        <ul>
-            <li>Shit's lightweight and loads fast</li>
-            <li>Fits on all your shitty screens</li>
-            <li>Looks the same in all your shitty browsers</li>
-            <li>The motherfucker's accessible to every asshole that visits your site</li>
-            <li>Shit's legible and gets your fucking point across (if you had one instead of just 5mb pics of hipsters drinking coffee)</li>
-        </ul>
-
-        <h3>Well guess what, motherfucker:</h3>
-
-        <p>You. Are. Over-designing. Look at this shit. It's a motherfucking website. Why the fuck do you need to animate a fucking trendy-ass banner flag when I hover over that useless piece of shit? You spent hours on it and added 80 kilobytes to your fucking site, and some motherfucker jabbing at it on their iPad with fat sausage fingers will never see that shit. Not to mention blind people will never see that shit, but they don't see any of your shitty shit.</p>
-
-        <p>You never knew it, but this is your perfect website. Here's why.</p>
-
-        <h2>It's fucking lightweight</h2>
-
-        <p>This entire page weighs less than the gradient-meshed facebook logo on your fucking Wordpress site. Did you seriously load 100kb of jQuery UI just so you could animate the fucking background color of a div? You loaded all 7 fontfaces of a shitty webfont just so you could say "Hi." at 100px height at the beginning of your site? You piece of shit.</p>
-
-        <h2>It's responsive</h2>
-
-        <p>You dumbass. You thought you needed media queries to be responsive, but no. Responsive means that it responds to whatever motherfucking screensize it's viewed on. This site doesn't care if you're on an iMac or a motherfucking Tamagotchi.</p>
-
-        <h2>It fucking works</h2>
-
-        <p>Look at this shit. You can read it ... that is, if you can read, motherfucker. It makes sense. It has motherfucking hierarchy. It's using HTML5 tags so you and your bitch-ass browser know what the fuck's in this fucking site. That's semantics, motherfucker.</p>
-
-        <p>It has content on the fucking screen. Your site has three bylines and link to your dribbble account, but you spread it over 7 full screens and make me click some bobbing button to show me how cool the jQuery ScrollTo plugin is.</p>
-
-        <p>Cross-browser compatibility? Load this motherfucker in IE6. I fucking dare you.</p>
-
-        <h2>This is a website. Look at it.  You've never seen one before.</h2>
-
-        <p>Like the man who's never grown out his beard has no idea what his true natural state is, you have no fucking idea what a website is. All you have ever seen are shitty skeuomorphic bastardizations of what should be text communicating a fucking message. This is a real, naked website. Look at it. It's fucking beautiful.</p>
-
-        <h3>Yes, this is fucking satire, you fuck</h3>
-
-        <p>I'm not actually saying your shitty site should look like this. What I'm saying is that all the problems we have with websites are <strong>ones we create ourselves</strong>. Websites aren't broken by default, they are functional, high-performing, and accessible. You break them. You son-of-a-bitch.</p>
-
-        <blockquote cite="https://www.vitsoe.com/us/about/good-design">"Good design is as little design as possible."<br>
-            - some German motherfucker
-        </blockquote>
-
-    <hr>
-
-    <h2>Epilogue</h2>
-    <p>Inspired by <a target="_blank" href="http://motherfuckingwebsite.com">this</a></p>
-    <p>Find my fucking work <a target="_blank" href="https://github.com/lispyclouds">here</p>
+    <div class="container">
+        <a target="_blank" href="https://github.com/lispyclouds">λ</a>
+    </div>
 </body>
 </html>
