--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Damned Website</title>
 <style>
+    body {
+        background-color: #272B35;
+    }
+
     div.container {
         margin: 0;
         position: absolute;
@@ -17,7 +21,7 @@
     div.container a {
         text-decoration: none;
         font-size: 800%;
-        color: red;
+        color: #FAFAFA;
     }
 </style>
 </head>
