--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     }
 
     div.container a {
+        font-family: 'Inconsolata';
+        src: url('Inconsolata.otf');
         text-decoration: none;
         font-size: 800%;
         color: #FAFAFA;
