--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
     <div class="container">
-        <a target="_blank" href="https://github.com/lispyclouds">λ</a>
+        <a target="_blank" href="https://github.com/lispyclouds">(λ :life)</a>
     </div>
 </body>
 </html>
