--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Damned Website</title>
+    <title>λ</title>
 <style>
     body {
         background-color: #272B35;
