--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     div.container a {
         font-family: 'Inconsolata';
-        src: url('Inconsolata.otf');
+        src: url('/Inconsolata.otf');
         text-decoration: none;
         font-size: 500%;
         color: #FAFAFA;
